syntax = "proto3";

option csharp_namespace = "Larp.Protos";

package larp;

enum AdminRank {
    ADMIN_RANK_NOT_ADMIN = 0;
    ADMIN_RANK_ADMIN = 1;
}

message Account {
    string account_id = 1;
    optional string name = 2;
    optional string location = 3;
    repeated AccountEmail emails = 4;
    optional string phone = 5;
    optional string notes = 6;
    bool is_super_admin = 7;
    string created = 8;
    repeated AccountCharacterSummary characters = 9;
}

message AccountEmail {
    string email = 1;
    bool is_verified = 2;
    bool is_preferred = 3;
}

message AccountCharacterSummary {
    string game_id = 1;
    string account_id = 2;
    string account_name = 3;
    string character_id = 4;
    string character_name = 5;
    optional string home_chapter = 6;
    optional string specialty = 7;
    int32 level = 8;
}

message AccountAdmin {
    string account_id = 1;
    string game_id = 2;
    AdminRank rank = 3;
}